# predict_akur8

./: .gitignore  README.md  example.ipynb  model.pkl  pyproject.toml  requirements.txt  test.ipynb
src/: Akur8Model.py  utils.py
src/predict_akur8/: Akur8Model.py  __init__.py  numpy_luts.py  utils.py
src/predict_akur8.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
